--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.4",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
     "react": "^16.13.1",
