--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@types/styled-components": "^5.1.4",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^2.1.3",
     "styled-components": "^5.2.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
