Add web3modal deps

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.4",
+    "@web3modal/ethereum": "^2.0.0-beta.4",
+    "@web3modal/react": "^2.0.0-beta.4",
+    "ethers": "^5.7.2",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
     "react": "^18.2.0",
