--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.13",
-    "@types/node": "^16.15.0",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
+    "@types/node": "^14.10.1",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.4",
     "@web3modal/ethereum": "^2.0.0-beta.4",
     "@web3modal/react": "^2.0.0-beta.4",
     "ethers": "^5.7.2",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.2.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "wagmi": "^0.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
